# risu

./: .gitignore  .gitmessage  .pre-commit-config.yaml  CONTRIBUTING.md  ChangeLog  PLUGIN_DEVELOPMENT.md  README.md  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini
.github/workflows/: bandit.yml  codacy.yml  codeql.yml  dependency-review.yml  enhanced-python-tests.yml  frogbot-scan-and-fix.yml  performance-tests.yml  pre-commit.yml  python-package.yml  python-publish.yml  release.yml  summary.yml
benchmarks/: README.md
doc/examples/: example_bash_plugin.sh
doc/internal/: QUICK_WINS_COMPLETED.md
maguiclient/: magui.py
risuclient/: executor.py  metadata.py  shell.py
risuclient/common.d/: 00-core.sh
risuclient/plugins/core/CCN-STIC/610A22/: cryptopolicieslevel.sh  firewall-security.sh  sysctl-security.sh  systemd-security.sh  userswithoutpassword.sh
risuclient/plugins/core/CCN-STIC/619/: access-control.sh  audit-logging.sh  authentication-security.sh  file-permissions.sh  fstab.sh  logindefs.sh  network-security.sh  service-security.sh  sysctl-kernel.sh  vulnerability-management.sh
risuclient/plugins/core/backup/: backup-status.sh
risuclient/plugins/core/bugzilla/docker/: 1493523.sh
risuclient/plugins/core/bugzilla/httpd/: 1406417.sh
risuclient/plugins/core/ceph/: blacklistop.sh  min-size.sh  pg-num.sh  status.sh
risuclient/plugins/core/cifs/: connect-time-out.sh  operation-not-supported.sh  perms-denied.sh  required-key-not-avail.sh  syntax-or-miss-client.sh
risuclient/plugins/core/cloud/: aws-ec2-metadata.sh  aws-security-groups.sh  azure-vm-metadata.sh  gcp-metadata.sh  terraform-state.sh
risuclient/plugins/core/containers/: docker-health.sh
risuclient/plugins/core/database/: influxdb-config.sh  mysql-health.sh  oracle-config.sh  postgresql-config.sh
risuclient/plugins/core/docker/: excessive-memory-usage.sh
risuclient/plugins/core/filesystem/: filesystem-corruption.sh
risuclient/plugins/core/hardware/: hardware-sensors.sh
risuclient/plugins/core/httpd/: max_request_workers.sh
risuclient/plugins/core/informative/: linux16.sh  lynis.sh  versionlock.sh  xsos.sh
risuclient/plugins/core/kernel/: kernel-modules.sh
risuclient/plugins/core/logs/: log-rotation.sh
risuclient/plugins/core/messaging/: activemq-config.sh  kafka-config.sh  nats-config.sh  redis-cluster.sh
risuclient/plugins/core/monitoring/: elasticsearch-cluster.sh  grafana-config.sh  nagios-config.sh  prometheus-config.sh
risuclient/plugins/core/network/: dns-resolution.sh  external_connectivity.sh  interface-errors.sh  interface-onboot.sh  network-connectivity.sh
risuclient/plugins/core/openshift/: api-server-health.sh  authentication.sh  backup-restore.sh  builds-cicd.sh  cluster-upgrades.sh  cluster-version.sh  console-web.sh  dns-validation.sh  docker.sh  etcd-health.sh  etcd.sh  events-analysis.sh  image-registry.sh  ingress-routes.sh  logging-stack.sh  machine-config.sh  master-api.sh  monitoring-stack.sh  node-health.sh  openstack-on-openshift.sh  operator-health.sh  ovs.sh  performance-monitoring.sh  pod-restart-patterns.sh  sdn-networking.sh  secrets-management.sh  security-compliance.sh  service-mesh.sh  storage-health.sh
risuclient/plugins/core/openstack/: debug.sh  ksm-disabled-on-nfv.sh  mongodb_size.sh  packstack.sh  too-many-open-files.sh  traceback.sh
risuclient/plugins/core/pacemaker/: disabled_resources.sh  failed_actions.sh  fence_device.sh  maintenance.sh  nodes-standby.sh  nodes_number.sh  packages.sh  stonith_enabled.sh  stopped_resources.sh
risuclient/plugins/core/performance/: io-performance.sh
risuclient/plugins/core/realtime/: cpupinning.sh  kernel-rt-cmdline.sh  kernel-rt-disablecstates.sh
risuclient/plugins/core/security/: cis-benchmark.sh  dhcp-rhsa-2018-1453.sh  firewall-config.sh  meltdown-disabled.sh  selinux-config.sh  spectre-disabled.sh  ssh-configuration.sh  ssl-certificate.sh  user-accounts.sh
risuclient/plugins/core/supportability/: btrfs-deprecated.sh  rhel8-deprecated-modules.sh  rhel8-deprecated-packages.sh  rhel9-deprecated-packages.sh  stretch-ftp-in-sources.sh  stretch-unsupported-packages.sh
risuclient/plugins/core/sysinfo/: bios-version.sh  kernel.sh  loadavg.sh  memory.sh  redhat-release.sh  systemdate.sh  virt-type.sh
risuclient/plugins/core/system/: abrtd-config.sh  baremetal.sh  boot-time-slow.sh  clock-0-ntp-services.sh  clock-1-chrony.sh  clock-1-ntpd.sh  clock-2-chronyd-quantity.sh  clock-2-ntpd-quantity.sh  clock-ntpd-time-reset.sh  clock-ptp.sh  conntrack_full.sh  context-switches-high.sh  corrupted_journal.sh  cpu-speed.sh  cpu-usage-high.sh  critical-processes-missing.sh  cron-jobs.sh  current-kernel-RT-vs-installed.sh  current-kernel-vs-installed.sh  disk-space-full.sh  disk_inode_usage.sh  disk_usage.sh  environment-variables.sh  even-mpaths.sh  failed-services.sh  firewall.sh  freeradius_incompatible_regex.sh  hardware_virtualization.sh  inode-usage-high.sh  interrupts-high.sh  kdump-checker.sh  kernel-errors.sh  kernel-tainted.sh  kernel_panic.sh  kvm_module-loaded.sh  load-average-high.sh  logrotate.sh  megaraid.sh  memcached-udp-ip-binding.sh  memory-usage-high.sh  (+40 more)
risuclient/plugins/core/virtualization/: libvirt-mig-block-conflict.sh  libvirt-qemu-kernel-compatibility.sh
risuclient/plugins/core/web/: web-server-status.sh
risuclient/plugins/metadata/openshift/: system-role.sh
risuclient/plugins/metadata/openstack/: osp-release.sh  system-role.sh
risuclient/plugins/metadata/ovirt-rhv/: ovirt-system-role.sh
risuclient/plugins/metadata/pacemaker/: cluster-name.sh  node-pacemaker-ip.sh
risuclient/plugins/metadata/system/: defaultroute.sh  hostname.sh  release.sh  sosreport-date.sh  system-uuid.sh
tests/: run_extended_tests.py  test_coverage.py  test_integration.py  test_live_execution.py  test_network_plugins.py  test_openshift_plugins.py  test_openstack_plugins.py  test_performance.py  test_plugin_metadata_properties.py  test_plugin_validation.py  test_security_plugins.py  test_sosreport_execution.py
tools/: benchmark_plugins.py  compare_benchmarks.py
(+561 files in other folders)
